# KtsAlgorithms

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/kts/algorithms/: CMakeLists.txt  sort.hpp
src/kts_sorting_algorithms/: CMakeLists.txt  sorting_algorithms.cppm  sorting_algorithms.hpp
test/: CMakeLists.txt  test_sorts.cpp
